@@ -2,10 +2,10 @@
 @import "bootstrap/company-variables";
 @import "bootstrap/variables";
 
-$primary1: #FF6600 !default;
-$primary5: #000 !default;
-$light-on-dark-text: #fff !default;
-$lighter-border-color: #eee !default;
+$xtatik-primary1: #FF6600 !default;
+$xtatik-primary2: #000 !default;
+$xtatik-light-on-dark-text: #fff !default;
+$xtatik-lighter-border-color: #eee !default;
 
 $xtatik-productnumber-text-color: #999 !default;
 
@@ -80,8 +80,8 @@ h1 {
 
     li {
         padding: 1ex 0;
-        color: $light-on-dark-text;
-        border: 1px solid $lighter-border-color;
+        color: $xtatik-light-on-dark-text;
+        border: 1px solid $xtatik-lighter-border-color;
         border-top: 0;
         border-left: 0;
     }
@@ -140,8 +140,8 @@ footer {
     padding: .5em 1em;
     border-radius: 4px;
     margin-top: 1em;
-    background: lighten($lighter-border-color, 5%);
-    border: 1px dotted $lighter-border-color;
+    background: lighten($xtatik-lighter-border-color, 5%);
+    border: 1px dotted $xtatik-lighter-border-color;
     font-size: 90%;
 
     .next {
@@ -360,7 +360,7 @@ footer {
 
         small {
             font-size: 35%;
-            color: lighten($primary5, 5%);
+            color: lighten($xtatik-primary2, 5%);
             letter-spacing: 0;
         }
     }
@@ -375,7 +375,7 @@ footer {
         font-size: 300%;
         letter-spacing: -2px;
         text-align: center;
-        color: darken($primary1, 10%);
+        color: darken($xtatik-primary1, 10%);
         transition: transform 3s;
         transform: scale(1);
     }
